[Spring 지하철 노선도 - 3단계] 써머(최혜원) 미션 제출합니다. (#265)
* feat: 도메인 기본 검증(필드값 존재여부) 추가

* refactor: 프로덕션에서 사용하지 않는 코드 테스트로 이동

* docs: 3단계 기능 요구사항 작성

* feat: 두 구간 간의 관계를 구한다

* refactor: 구간-구간 관계 계산을 구간 컬렉션-구간 으로 변경

* feat: 구간 컬렉션과 새 구간이 완전히 겹치거나 다를 때 예외 처리

* feat: 구간 컬렉션에 같은 방향 종착역을 공유하는 구간 추가

* feat: 구간에서 겹치는 구간을 빼는 기능

* refactor: 구간 간의  검증을 구간으로 이동

* feat: 상행역을 공유하는 경우의 노선 추가

* feat: 하행역을 공유하는 노선 추가

* feat: 두 구간 합치기

* feat: 노선 역 삭제 - 상/하행 종점역인 경우

* feat: 종점이 아닌 역 삭제 시 인접 노선 재설정

* refactor: 테스트 코드 개선

* feat: 노선에서 구간 추가, 역 제거

* feat: 노선 생성자에서 구간 정렬

* feat: 노선 간에 변경된 구간을 탐지

* refactor: 변경 구간 찾는 기능 삭제

* refactor: 구간 정렬 방식 변경

* jdbc 구간 저장

* feat: 특정 노선에 해당하는 모든 구간 조회

* refactor: LineDao가 LineDto를 사용하도록 변경

* feat: repository를 통한 새로운 노선과 구간 저장

* feat: 레포지토리로 노선 조회

* feat: 노선 생성 인수 테스트 수정과 컨트롤러 테스트 작성

* refactor: 반환형 변경에 따른 테스트 수정

* refactor: Sections의 메서드 반환형 변경

* feat: 단일 노선 조회 컨트롤러 테스트

* feat: 역 컨트롤러 역 생성, 모든 역 조회 테스트

* feat: 컨트롤러 단일 역 삭제 테스트

* feat: 역 생성 400 예외처리 테스트

* refactor: 존재하지 않는 pk값 조회 시 404 에러 반환 및 테스트 작성

* refactor: 메서드 변수 선언 제거

* refactor: 테스트 패키지 이동

* refactor: 메서드 시그니쳐 변경으로 깨지는 테스트 수정

* docs: api 요구사항 정리

* build: sql 생성문 수정

* style: 불필요한 import제거

* build: sql문 수정

* refactor:
인수 테스트 수정

* style: 불필요한 import와 클래스 제거

* refactor: 노선 삭제 시그니쳐 변경에 따른 리팩터링

* refactor: 외래키 지정에 따라 걔지는 테스트 정정

* feat: api 구간 등록 및 제거

* refactor: 사용하지 않는 dao 제거

* refactor: 사용하지 않는 import문 제거, 생성자 중복 제거

* fix: 구간이 하나뿐일 때 삭제 예외처리 하지 않는 오류

* feat: request에 대한 null 검증

* build: sql drop table 부분 주석처리

* fix: service에 transactional 어노테이션 추가

* refactor: 테스트용 sql문 분리 추가

* refactor: 메서드 파라미터 변경

* refactor: spring boot validation을 이용한 request 값 유효성 검증

* feat: 빈 데이터값에 대한 NOT_FOUND 응답에 바디 메세지 추가

* refactor: 생성자를 private 지정

* fix: valid 어노테이션을 숫자에 적합한 타입으로 변경

* refactor: 쿼리문 반복 실행을 한 번에 모든 값을 가져오도록 개선

* refactor: 쓰지 않는 생성자 파라미터 제거

* re